; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/dlm/extr_userdlm.c_user_may_continue_on_blocked_lock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/dlm/extr_userdlm.c_user_may_continue_on_blocked_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.user_lock_res = type { i32, i32 }

@USER_LOCK_BLOCKED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.user_lock_res*, i32)* @user_may_continue_on_blocked_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @user_may_continue_on_blocked_lock(%struct.user_lock_res* %0, i32 %1) #0 {
  %3 = alloca %struct.user_lock_res*, align 8
  %4 = alloca i32, align 4
  store %struct.user_lock_res* %0, %struct.user_lock_res** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.user_lock_res*, %struct.user_lock_res** %3, align 8
  %6 = getelementptr inbounds %struct.user_lock_res, %struct.user_lock_res* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @USER_LOCK_BLOCKED, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = call i32 @BUG_ON(i32 %12)
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.user_lock_res*, %struct.user_lock_res** %3, align 8
  %16 = getelementptr inbounds %struct.user_lock_res, %struct.user_lock_res* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @user_highest_compat_lock_level(i32 %17)
  %19 = icmp sle i32 %14, %18
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @user_highest_compat_lock_level(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
